fix: checkmark vertical alignment

--- a/packages/common/qds-core/src/checkbox/qds-checkbox.css
+++ b/packages/common/qds-core/src/checkbox/qds-checkbox.css
@@ -98,3 +98,15 @@
     color: var(--color-utility-disabled-text);
   }
 }
+
+.qui-checkbox__indicator {
+  align-items: center;
+  display: inline-flex;
+  &[hidden] {
+    display: none;
+  }
+
+  [data-part="indicator-icon"] {
+    vertical-align: middle;
+  }
+}
